@@ -3,8 +3,17 @@ import { HabitColumns } from './HabitColumns'
 import { HabitsTableContainer } from './HabitsTableContainer'
 import { PageHeaderControlsArea } from '../../../ui/page/header/PageHeaderControlsAreaProvider'
 import { ResetHabitsPrompt } from './reset/ResetHabitsPrompt'
+import { useUpdateUserMutation } from '@increaser/ui/user/mutations/useUpdateUserMutation'
+import { useEffect } from 'react'
 
 export const TrackHabits = () => {
+  const { mutate } = useUpdateUserMutation()
+  useEffect(() => {
+    mutate({
+      viewedHabitsAt: Date.now(),
+    })
+  }, [mutate])
+
   return (
     <HabitsTableContainer>
       <PageHeaderControlsArea>
