@@ -1,3 +1,4 @@
+To help users remember to track their habits, a prompt appears in the sidebar navigation next to the "Habits" item. This prompt will show up if the user hasn't visited the "Habits" page that day.
 1728708465131
 Users can now expedite the creation of recurring tasks ahead of schedule by using the 'Create Now' button found in the 'Upcoming' tab of the 'Tasks' page.
 Users can now see on the 'Upcoming' tab of the 'Tasks' page when their recurring task will actually be created.
